package Java.mohamedproject.Enums;

public enum Nationality {
    EGYPT,
    UNITED_STATES,
    FRANCE,
    GERMANY,
    UNITED_KINGDOM,
    CANADA,
    AUSTRALIA,
    INDIA,
    JAPAN,
    BRAZIL,
    SAUDI_ARABIA,
    UNITED_ARAB_EMIRATES,
    QATAR,
    KUWAIT,
    OMAN,
    BAHRAIN,
    TURKEY,
    ITALY,
    SPAIN,
    NETHERLANDS,
    SWEDEN,
    NORWAY,
    SWITZERLAND,
    CHINA,
    SOUTH_KOREA,
    RUSSIA,
    MEXICO,
    ARGENTINA,
    SOUTH_AFRICA,
    NEW_ZEALAND

}
