package Java.mohamedproject.Enums;

public enum PersonCity {

    CAIRO,
    ALEXANDRIA,
    PARIS,
    LONDON,
    NEW_YORK,
    TOKYO,
    BERLIN,
    MADRID,
    OTTAWA,
    CANBERRA,
    DUBAI,
    RIYADH,
    JEDDAH,
    ABU_DHABI,
    DOHA,
    KUWAIT_CITY,
    AMMAN,
    BEIRUT,
    ISTANBUL,
    ROME,
    BARCELONA,
    MOSCOW,
    BEIJING,
    SEOUL,
    SINGAPORE,
    LOS_ANGELES,
    CHICAGO,
    TORONTO,
    SYDNEY,
    MELBOURNE

}
